Rewrite registry loading, nuke essentially everything else that was doing custom codec replacement, loot table or recipe modification.